--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,9 +1,28 @@
+<html>
+ <head>
+  <style>
+   body {
+   background-color: #f5f5f5; 
+  }
+  </style>
+ </head>
+<div style="text-align:center">
 <h1>Welcome to BookMatch</h1>
-<h2>「知らないは、きっと楽しい」
-皆さんと本の良き出会いがありますように</h2>
-
-<div>
-    <div><%= link_to "Log in", new_user_session_path %></div>
-    <div><%= link_to "Sign up", new_user_registration_path %></div>
-  </div>
+<h2>「知らないは、きっと楽しい」</h2>
+<h3>皆さんと本の良き出会いがありますように</h3>
 </div>
+<div class="row">
+  <div class="col-md-6 offset-md-3">
+    <div class="card">
+      <div class="card-body">
+    <div class="btn-wrapper btn-lg center">
+    <div class="d-grid gap-2 col-6 mx-auto">
+    <div class="row">
+     <%= link_to "Log in", new_user_session_path, class: "btn btn-sm btn-primary btn-block mb-3" %>
+    </div>
+    <div class="row">
+     <%= link_to "Sign up", new_user_registration_path, class: "btn btn-sm btn-success btn-block" %>
+    </div>
+</div>
+</div>
+
