--- a/app/views/public/users/_info.html.erb
+++ b/app/views/public/users/_info.html.erb
@@ -1,18 +1,37 @@
-<%= @user.name %>
-<tr>
-    <th>follows</th>
-    <th><%= link_to user.followings.count, user_followings_path(user) %></th>
-</tr>
-<tr>
-    <th>followers</th>
-    <th><%= link_to user.followers.count, user_followers_path(user) %></th>
-</tr>
-<div class="row">
-  <% if current_user != user %>
-    <td><%= render "relationships/btn", user: user, options: { class: ""} %></td>
-  <% else %>
-    <%= link_to edit_user_path(user), class: "btn btn-outline-secondary btn-block" do %>
-      <i class="fas fa-user-cog"></i>
-    <% end %>
-  <% end %>
+
+<h4>ユーザー情報</h4>
+<%= image_tag user.get_profile_image(100,100), class: "mb-4", style: "width:100%;" %>
+
+<table class="table">
+  <tbody>
+    <tr>
+      <th>名前</th>
+      <th><%= user.name %></th>
+    </tr>
+    <tr>
+      <th>自己紹介</th>
+      <th><%= user.introduction %></th>
+    </tr>
+  </tbody>
+</table>
+
+<div class="d-flex justify-content-between">
+  <div class="d-flex mx-1 h4">
+    <p>follows</p>:
+    <%= link_to user.followings.count, followings_user_path(user), class: "ml-2" %>
+  </div>
+  <div class="d-flex mx-1 h4">
+    <p>followers</p>:
+    <%= link_to user.followers.count, followers_user_path(user), class: "ml-2" %>
+  </div>
 </div>
+
+<%= link_to "favorites", favorites_user_path(user), class: "btn btn-outline-primary btn-block" %>
+
+<% if current_user != user %>
+  <%= render "relationships/btn", user: user %>
+<% else %>
+  <%= link_to edit_user_path(user), class: "btn btn-outline-secondary btn-block" do %>
+    <i class="fas fa-user-cog"></i>
+  <% end %>
+<% end %>
