--- a/app/views/public/users/index.html.erb
+++ b/app/views/public/users/index.html.erb
@@ -1,52 +1,15 @@
-<div>
-  <div>
-    <div>
-      <h2>User info</h2>
-      <%= image_tag @user.get_profile_image(100,100) %>
-      <table>
-        <tbody>
-          <tr></tr>
-          <tr>
-            <th>name</th>
-            <th><%= @user.name %></th>
-          </tr>
-          <tr>
-            <th>introduction</th>
-            <th><%= @user.introduction %></th>
-          </tr>
-        </tbody>
-      </table>
+<h1>ユーザー一覧</h1>
 
-      <div>
-        <%= link_to edit_user_path(@user) do %>
-          <i class="fas fa-user-cog"></i>
-        <% end %>
-      </div>
- <div>
-      <h2>Users</h2>
-      <table>
-        <thead>
-          <tr>
-            <th>image</th>
-            <th>name</th>
-            <th></th>
-          </tr>
-        </thead>
-        <tbody>
-          <% @users.each do |user| %>
-            <tr>
-              <td><%= image_tag user.get_profile_image(80,80) %></td>
-              <td><%= user.name %></td>
-              <td>フォロー数: <%= user.followings.count %></td>
-        <td>フォロワー数: <%= user.followers.count %></td>
-        <td><%= render "relationships/btn", user: user, options: { class: "follow-link" } %></td>
-              <td>
-                <%= link_to "Show", user_path(user.id) %>
-              </td>
-            </tr>
-          <% end %>
-        </tbody>
-      </table>
-    </div>
+<div class="row">
+
+
+  <div class="col-md-12">
+    <%= form_with url: users_path, method: :get do |f| %>
+      <%= f.search_field :keyword, value: params[:keyword] %>
+      <%= f.submit %>
+    <% end %>
+
+
+    <%= render 'public/users/users', users: @users %>
   </div>
 </div>
