--- a/app/views/public/books/index.html.erb
+++ b/app/views/public/books/index.html.erb
@@ -3,7 +3,7 @@
     <%= form_with url: books_path, method: :get do |f| %>
       <div class="d-flex">
         <%= f.search_field :keyword, value: params[:keyword], class: "form-control w-50 mr-2" %>
-        <%= f.select :tag, [["tag1", 1], ["tag2", 2], ["tag3", 3]], {}, { class: "form-control w-25 mr-2"} %>
+        <%#= f.select :tag, [["tag1", 1], ["tag2", 2], ["tag3", 3]], {}, { class: "form-control w-25 mr-2"} %>
         <%= f.submit "search", class: "btn btn-primary w-25" %>
       </div>
     <% end %>
