--- a/app/views/public/users/edit.html.erb
+++ b/app/views/public/users/edit.html.erb
@@ -10,6 +10,11 @@
     <%= f.label :email %>
     <%= f.email_field :email %>
   </div>
+  
+  <div>
+    <%= f.label :profile_image %>
+    <%= f.file_field :profile_image %>
+  </div>
 
   <div>
     <%= f.submit "更新" %>
