--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -24,7 +24,7 @@
      <%= link_to "Sign up", new_user_registration_path, class: "btn btn-sm btn-success btn-block mb-3" %>
     </div>
     <div class="row">
-     <%= link_to "ゲストログイン", guest_sign_in_path, method: :post, class: "btn btn-sm btn-primary btn-block" %>
+     <%= link_to "ゲストログイン", guest_sign_in_path, method: :post, class: "btn btn-sm btn-secondary btn-block" %>
     </div>
 </div>
 </div>
